added iemgui,...; added INSTALL.txt for explanation

--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -1,16 +1,20 @@
 EXT=pd_linux
 
 CVSROOT=-d:pserver:anonymous@cvs.pd.iem.at:/cvsroot/pure-data
-LOCINSTALL_DIR=../lib/libs/
+REVISION=HEAD
+
+LOCINSTALL_DIR=../../lib/libs/
 
 .PHONY: aconnect-src iem_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
+
+default: locinstall
 
 sf-login:
 	cvs $(CVSROOT) login
 	touch sf-login
 
 aconnect-src: sf-login
-	cvs $(CVSROOT) checkout -d aconnect externals/iem/aconnect/
+	cvs $(CVSROOT) checkout -r $(REVISION) -d aconnect externals/iem/aconnect/
 
 aconnect-build: aconnect-src
 	make -C aconnect
@@ -21,25 +25,26 @@ aconnect-locinstall:
 
 
 iem_ambi-src: sf-login
-	cvs $(CVSROOT) checkout -d iem_ambi externals/iem/iem_ambi/
+	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_ambi externals/iem/iem_ambi/
 
 iem_ambi-build: iem_ambi-src
 	make -C iem_ambi
 
 iem_ambi-locinstall:
 
-iemgui-src: sf-login
-	cvs $(CVSROOT) checkout -d iemgui externals/iem/iemgui/
+iemgui-src: 
 
 iemgui-build: iemgui-src
-	make -C iemgui
+	make -C ../iemgui 
 
 iemgui-locinstall:
+	cp ../iemgui/iemgui.$(EXT) $(LOCINSTALL_DIR)
 
 iemlib-src: sf-login
-	cvs $(CVSROOT) checkout -d iemlib externals/iemlib/
+	cvs $(CVSROOT) checkout -r $(REVISION) -d iemlib externals/iemlib/
 
 iemlib-build: iemlib-src
+	mkdir -p iemlib/lib
 	make -C iemlib
 
 iemlib-locinstall: 
@@ -47,7 +52,7 @@ iemlib-locinstall:
 	cp iemlib/iemabs/*.pd $(LOCINSTALL_DIR)
 
 iemmatrix-src: sf-login
-	cvs $(CVSROOT) checkout -d iemmatrix externals/iem/iemmatrix/
+	cvs $(CVSROOT) checkout -r $(REVISION) -d iemmatrix externals/iem/iemmatrix/
 
 iemmatrix-build: iemmatrix-src
 	cd iemmatrix/src && autoconf && ./configure
@@ -57,18 +62,26 @@ iemmatrix-locinstall:
 	cp iemmatrix/*.$(EXT) $(LOCINSTALL_DIR)
 	cp iemmatrix/abs/*.pd $(LOCINSTALL_DIR)
 
-popup-src: sf-login
-	cvs $(CVSROOT) checkout -d popup externals/bbogart/popup/
+popup-src_: sf-login
+	cvs $(CVSROOT) checkout -r $(REVISION) -d popup externals/bbogart/popup/
 
-popup-build: popup-src
+popup-build_: popup-src
 	make -C popup pd_linux
 
-popup-locinstall: 
+popup-locinstall_: 
 	cp popup/*.$(EXT) $(LOCINSTALL_DIR)
+
+popup-src: 
+
+popup-build: popup-src
+	make -C ../popup pd_linux
+
+popup-locinstall: 
+	cp ../popup/*.$(EXT) $(LOCINSTALL_DIR)
 
 
 zexy-src: sf-login
-	cvs $(CVSROOT) checkout -d zexy externals/zexy 
+	cvs $(CVSROOT) checkout -r $(REVISION) -d zexy externals/zexy 
 
 zexy-build: zexy-src
 	make -C zexy/src
@@ -78,8 +91,12 @@ zexy-locinstall:
 	cp zexy/abs/*.pd $(LOCINSTALL_DIR)
 
 
-sources: aconnect-src iemlib-src iemmatrix-src popup-src zexy-src
+sources: aconnect-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
 
-build: sources aconnect-build iemlib-build iemmatrix-build popup-build zexy-build
+build: sources aconnect-build iemgui-build iemlib-build iemmatrix-build popup-build zexy-build
 
-locinstall: build aconnect-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall
+locinstall: build aconnect-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall
+
+distclean:
+	rm -rf aconnect iem_ambi iemlib iemmatrix popup zexy sf-login
+	rm -rf $(LOCINSTALL_DIR)/*
