--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -26,23 +26,24 @@ aconnect-src: sf-login
 aconnect-build: aconnect-src
 	make -C aconnect
 
-aconnect-locinstall:
+aconnect-locinstall: aconnect-build
 	cp aconnect/*.$(EXT) aconnect/aconnects.pd $(LOCINSTALL_DIR)
 
 iem_ambi-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_ambi externals/iem/iem_ambi/
 
 iem_ambi-build: iem_ambi-src
-	make -C iem_ambi
+	make -C iem_ambi/src
 
-iem_ambi-locinstall:
+iem_ambi-locinstall: iem_ambi-build
+	cp iem_ambi/src/iem_ambi.$(EXT) $(LOCINSTALL_DIR)
 
 iemgui-src: 
 
 iemgui-build: iemgui-src
 	make -C ../iemgui 
 
-iemgui-locinstall:
+iemgui-locinstall: iemgui-build
 	cp ../iemgui/iemgui.$(EXT) $(LOCINSTALL_DIR)
 
 iemlib-src: sf-login
@@ -52,7 +53,7 @@ iemlib-src: sf-login
 iemlib-build: iemlib-src
 	make -C iemlib
 
-iemlib-locinstall: 
+iemlib-locinstall: iemlib-build
 	cp iemlib/lib/*.$(EXT) $(LOCINSTALL_DIR)
 	cp iemlib/iemabs/*.pd $(LOCINSTALL_DIR)
 
@@ -63,7 +64,7 @@ iemmatrix-build: iemmatrix-src
 	cd iemmatrix/src && autoconf && ./configure
 	make -C iemmatrix/src
 
-iemmatrix-locinstall: 
+iemmatrix-locinstall: iemmatrix-build
 	cp iemmatrix/*.$(EXT) $(LOCINSTALL_DIR)
 	cp iemmatrix/abs/*.pd $(LOCINSTALL_DIR)
 
@@ -73,7 +74,7 @@ popup-src_: sf-login
 popup-build_: popup-src
 	make -C popup pd_linux
 
-popup-locinstall_: 
+popup-locinstall_: popup-build_
 	cp popup/*.$(EXT) $(LOCINSTALL_DIR)
 
 popup-src: 
@@ -81,7 +82,7 @@ popup-src:
 popup-build: popup-src
 	make -C ../popup pd_linux
 
-popup-locinstall: 
+popup-locinstall: popup-build
 	cp ../popup/*.$(EXT) $(LOCINSTALL_DIR)
 
 
@@ -91,16 +92,16 @@ zexy-src: sf-login
 zexy-build: zexy-src
 	make -C zexy/src
 
-zexy-locinstall: 
+zexy-locinstall: zexy-build
 	cp zexy/*.$(EXT) $(LOCINSTALL_DIR)
 	cp zexy/abs/*.pd $(LOCINSTALL_DIR)
 
 
-sources: aconnect-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
+sources: aconnect-src iem_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
 
-build: sources aconnect-build iemgui-build iemlib-build iemmatrix-build popup-build zexy-build
+build: aconnect-build iem_ambi-build iemgui-build iemlib-build iemmatrix-build popup-build zexy-build
 
-locinstall: build aconnect-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall
+locinstall: aconnect-locinstall iem_ambi-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall
 
 clean: 
 	rm -rf aconnect iem_ambi iemlib iemmatrix popup zexy sf-login
