added simple targets like "iemlib" to fetch/build/install a library

--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -29,6 +29,8 @@ aconnect-build: aconnect-src
 aconnect-locinstall: aconnect-build
 	cp aconnect/*.$(EXT) aconnect/aconnects.pd $(LOCINSTALL_DIR)
 
+aconnect: aconnect-locinstall
+
 iem_ambi-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_ambi externals/iem/iem_ambi/
 
@@ -38,6 +40,8 @@ iem_ambi-build: iem_ambi-src
 iem_ambi-locinstall: iem_ambi-build
 	cp iem_ambi/src/iem_ambi.$(EXT) $(LOCINSTALL_DIR)
 
+iem_ambi: iem_ambi-locinstall
+
 iemgui-src: 
 
 iemgui-build: iemgui-src
@@ -45,6 +49,8 @@ iemgui-build: iemgui-src
 
 iemgui-locinstall: iemgui-build
 	cp ../iemgui/iemgui.$(EXT) $(LOCINSTALL_DIR)
+
+iemgui: iemgui-locinstall
 
 iemlib-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d iemlib externals/iemlib/
@@ -57,6 +63,8 @@ iemlib-locinstall: iemlib-build
 	cp iemlib/lib/*.$(EXT) $(LOCINSTALL_DIR)
 	cp iemlib/iemabs/*.pd $(LOCINSTALL_DIR)
 
+iemlib: iemlib-locinstall
+
 iemmatrix-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d iemmatrix externals/iem/iemmatrix/
 
@@ -67,6 +75,8 @@ iemmatrix-build: iemmatrix-src
 iemmatrix-locinstall: iemmatrix-build
 	cp iemmatrix/*.$(EXT) $(LOCINSTALL_DIR)
 	cp iemmatrix/abs/*.pd $(LOCINSTALL_DIR)
+
+iemmatrix: iemmatrix-locinstall
 
 popup-src_: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d popup externals/bbogart/popup/
@@ -85,6 +95,7 @@ popup-build: popup-src
 popup-locinstall: popup-build
 	cp ../popup/*.$(EXT) $(LOCINSTALL_DIR)
 
+popup: popup-locinstall
 
 zexy-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d zexy externals/zexy 
@@ -96,6 +107,7 @@ zexy-locinstall: zexy-build
 	cp zexy/*.$(EXT) $(LOCINSTALL_DIR)
 	cp zexy/abs/*.pd $(LOCINSTALL_DIR)
 
+zexy: zexy-locinstall
 
 sources: aconnect-src iem_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
 
