--- a/src/popup/makefile
+++ b/src/popup/makefile
@@ -3,6 +3,7 @@ current:
 
 clean: ; rm -f popup.pd_{linux,nt,irix?,darwin} *.o
 
+PDSOURCE=../../../pd/src
 # ----------------------- NT -----------------------
 
 pd_nt: popup.dll
@@ -12,7 +13,7 @@ pd_nt: popup.dll
 PDNTCFLAGS = /W3 /WX /DNT /DPD /nologo
 VC="D:\Program Files\Microsoft Visual Studio\Vc98"
 
-PDNTINCLUDE = /I. /I\tcl\include /I..\..\src /I..\..\..\pd\src /I$(VC)\include
+PDNTINCLUDE = /I. /I\tcl\include /I..\..\src /I$(PDSOURCE) /I$(VC)\include
 
 PDNTLDIR = $(VC)\lib
 PDNTLIB = $(PDNTLDIR)\libc.lib \
@@ -38,7 +39,7 @@ pd_irix5: popup.pd_irix5
 SGICFLAGS5 = -o32 -DPD -DUNIX -DIRIX -O2
 
 
-SGIINCLUDE =  -I../../src/ -I../../../pd/src
+SGIINCLUDE =  -I../../src/ -I$(PDSOURCE)
 
 .c.pd_irix5:
 	cc $(SGICFLAGS5) $(SGIINCLUDE) -o $*.o -c $*.c
@@ -55,7 +56,7 @@ LINUXCFLAGS = -DPD -O2 -funroll-loops -fomit-frame-pointer \
     -Wall -W -Wshadow -Wstrict-prototypes -Werror \
     -Wno-unused -Wno-parentheses -Wno-switch -fPIC
 
-LINUXINCLUDE =  -I../../src -I../../../pd/src -I/usr/local/src/pd/src
+LINUXINCLUDE =  -I../../src -I$(PDSOURCE)
 
 .c.pd_linux:
 	cc $(LINUXCFLAGS) $(LINUXINCLUDE) -o $*.o -c $*.c
