make sfplayer 16 channels

--- a/src/popup/makefile
+++ b/src/popup/makefile
@@ -3,7 +3,7 @@ current:
 
 clean: ; rm -f popup.pd_{linux,nt,irix?,darwin} *.o
 
-PDSOURCE=../../../pd/src
+PDSOURCE=/usr/local/src/pd/src
 # ----------------------- NT -----------------------
 
 pd_nt: popup.dll
