--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -5,7 +5,7 @@ REVISION=HEAD
 
 LOCINSTALL_DIR=../../lib/libs/
 
-.PHONY: install locinstall checkpddir aconnect-src iem_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src
+.PHONY: install locinstall checkpddir aconnect-src iem_ambi-src iem_bin_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src 
 
 install: checkpddir locinstall
 
@@ -65,6 +65,19 @@ iem_ambi-locinstall: iem_ambi-build
 
 iem_ambi: iem_ambi-locinstall
 
+######### IEM BIN AMBI ###############
+
+iem_bin_ambi-src: sf-login
+	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_bin_ambi externals/iem/iem_bin_ambi/
+
+iem_bin_ambi-build: iem_bin_ambi-src
+	make -C iem_bin_ambi/src
+
+iem_bin_ambi-locinstall: iem_bin_ambi-build
+	cp iem_bin_ambi/src/iem_bin_ambi.$(EXT) $(LOCINSTALL_DIR)
+
+iem_bin_ambi: iem_bin_ambi-locinstall
+
 ######## IEM GUI ##################
 
 iemgui-src: 
@@ -76,6 +89,18 @@ iemgui-locinstall: iemgui-build
 	cp ../iemgui/iemgui.$(EXT) $(LOCINSTALL_DIR)
 
 iemgui: iemgui-locinstall
+
+######## IEM SPEC2 ##################
+
+iem_spec2-src: 
+
+iem_spec2-build: iem_spec2-src
+	make -C ../iem_spec2 
+
+iem_spec2-locinstall: iem_spec2-build
+	cp ../iem_spec2/iem_spec2.$(EXT) $(LOCINSTALL_DIR)
+
+iem_spec2: iem_spec2-locinstall
 
 ######## IEM LIB ##################
 
@@ -172,7 +197,7 @@ sources: aconnect-src iem_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src
 
 build: aconnect-build iem_ambi-build iemgui-build iemlib-build iemmatrix-build popup-build zexy-build
 
-locinstall: aconnect-locinstall iem_ambi-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall
+locinstall: aconnect-locinstall iem_ambi-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall popup-locinstall zexy-locinstall iem_ambi-locinstall iem_spec2-locinstall
 
 clean: 
 	rm -rf aconnect iem_ambi iemlib iemmatrix popup zexy sf-login
