fixed path to iem_spec2 (it really shout rest here in the ./src directory rather than in ../)

--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -95,10 +95,10 @@ iemgui: iemgui-locinstall
 iem_spec2-src: 
 
 iem_spec2-build: iem_spec2-src
-	make -C ../iem_spec2 
+	make -C iem_spec2/src
 
 iem_spec2-locinstall: iem_spec2-build
-	cp ../iem_spec2/iem_spec2.$(EXT) $(LOCINSTALL_DIR)
+	cp iem_spec2/src/iem_spec2.$(EXT) $(LOCINSTALL_DIR)
 
 iem_spec2: iem_spec2-locinstall
 
