--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -139,19 +139,17 @@ iemmatrix: iemmatrix-locinstall
 miXed-src: sf-login
 	cvs $(CVSROOT) checkout -r $(REVISION) -d miXed externals/miXed/
 
-miXed-patched:
-	-patch -N miXed/Makefile.common < miXed_makefile.common.diff
-
-miXed-build: miXed-src miXed-patched 
-	make -C miXed 
+miXed-build: miXed-src
+	make -C miXed PD_DIR=$(PDSOURCE)
 
 mixed_objects=seq midiflush midiformat midiparse
 mixed_externals=$(mixed_objects:=.pd_linux)
 
-
 miXed-locinstall: miXed-build
 	for i in $(mixed_externals); do cp -v miXed/bin/$$i $(LOCINSTALL_DIR); done
-	for i in $(mixed_objects); do cp -v miXed/test/cyclone/$$i-test.pd $(LOCINSTALL_DIR)/$$i-help.pd; done
+#	for i in $(mixed_objects); do cp -v miXed/test/cyclone/$$i-test.pd $(LOCINSTALL_DIR)/$$i-help.pd; done
+
+miXed: miXed-locinstall
 
 ######## IEM GUI ##################
 # maybe substituted by iem-gui in future
