more on the migration to svn:externals

--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -5,7 +5,7 @@ REVISION=HEAD
 
 LOCINSTALL_DIR=../../lib/libs/
 
-.PHONY: install locinstall checkpddir aconnect-src iem_ambi-src iem_bin_ambi-src iemgui-src iemlib-src iemmatrix-src popup-src zexy-src 
+.PHONY: install locinstall checkpddir 
 
 install: checkpddir locinstall
 
@@ -30,10 +30,7 @@ sf-login:
 #amixer: amixer-locinstall
 
 ######## HDSPMMIXER ################
-hdspm_mixer-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d hdspm_mixer externals/iem/hdspm_mixer/
-
-hdspm_mixer-build: hdspm_mixer-src
+hdspm_mixer-build: 
 	make -C hdspm_mixer
 
 hdspm_mixer-locinstall: hdspm_mixer-build
@@ -42,15 +39,12 @@ hdspm_mixer-locinstall: hdspm_mixer-build
 hdspm_mixer: hdspm_mixer-locinstall
 
 hdspm_mixer-clean:
-	rm -rf hdspm_mixer
+
 
 
 ######## ACONNECT ################
 
-aconnect-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d aconnect externals/iem/aconnect/
-
-aconnect-build: aconnect-src
+aconnect-build:
 	make -C aconnect
 
 aconnect-locinstall: aconnect-build
@@ -59,14 +53,10 @@ aconnect-locinstall: aconnect-build
 aconnect: aconnect-locinstall
 
 aconnect-clean:
-	rm -rf aconnect
 
 ######### hcs's folder_list ###############
 
-folder_list-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d folder_list externals/hcs/folder_list.c
-
-folder_list-build: folder_list-src
+folder_list-build: 
 	$(CC) -DPD -O2 -funroll-loops -fomit-frame-pointer -fPIC -I$(PDSOURCE) -export_dynamic -shared -lc -lm -o folder_list/folder_list.$(EXT) folder_list/folder_list.c
 
 folder_list-locinstall: folder_list-build
@@ -75,14 +65,10 @@ folder_list-locinstall: folder_list-build
 folder_list: folder_list-locinstall
 
 folder_list-clean:
-	rm -rf folder_list
 
 ######### IEM AMBI ###############
 
-iem_ambi-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_ambi externals/iem/iem_ambi/
-
-iem_ambi-build: iem_ambi-src
+iem_ambi-build: 
 	make -C iem_ambi/src
 
 iem_ambi-locinstall: iem_ambi-build
@@ -91,14 +77,10 @@ iem_ambi-locinstall: iem_ambi-build
 iem_ambi: iem_ambi-locinstall
 
 iem_ambi-clean:
-	rm -rf iem_ambi
 
 ######### IEM BIN AMBI ###############
 
-iem_bin_ambi-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_bin_ambi externals/iem/iem_bin_ambi/
-
-iem_bin_ambi-build: iem_bin_ambi-src
+iem_bin_ambi-build:
 	make -C iem_bin_ambi/src
 
 iem_bin_ambi-locinstall: iem_bin_ambi-build
@@ -107,14 +89,10 @@ iem_bin_ambi-locinstall: iem_bin_ambi-build
 iem_bin_ambi: iem_bin_ambi-locinstall
 
 iem_bin_ambi-clean:
-	rm -rf iem_bin_ambi
 
 ######## IEM GUI ##################
 
-iemgui-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iemgui externals/iem/iemgui
-
-iemgui-build: iemgui-src
+iemgui-build: 
 	make -C iemgui/src
 
 iemgui-locinstall: iemgui-build
@@ -123,14 +101,10 @@ iemgui-locinstall: iemgui-build
 iemgui: iemgui-locinstall
 
 iemgui-clean:
-	rm -rf iemgui
 
 ######## IEM SPEC2 ##################
 
-iem_spec2-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iem_spec2 externals/iem/iem_spec2
-
-iem_spec2-build: iem_spec2-src
+iem_spec2-build:
 	make -C iem_spec2/src
 
 iem_spec2-locinstall: iem_spec2-build
@@ -139,15 +113,10 @@ iem_spec2-locinstall: iem_spec2-build
 iem_spec2: iem_spec2-locinstall
 
 iem_spec2-clean:
-	rm -rf iem_spec2
 
 ######## IEM LIB ##################
 
-iemlib-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iemlib externals/iemlib/
-	mkdir -p iemlib/lib
-
-iemlib-build: iemlib-src
+iemlib-build:
 	make -C iemlib
 
 iemlib-locinstall: iemlib-build
@@ -157,14 +126,10 @@ iemlib-locinstall: iemlib-build
 iemlib: iemlib-locinstall
 
 iemlib-clean:
-	rm -rf iemlib
 
 ####### IEM Matrix ###############
 
-iemmatrix-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d iemmatrix externals/iem/iemmatrix/
-
-iemmatrix-build: iemmatrix-src
+iemmatrix-build:
 	make -C iemmatrix/src
 
 iemmatrix-locinstall: iemmatrix-build
@@ -174,16 +139,12 @@ iemmatrix-locinstall: iemmatrix-build
 iemmatrix: iemmatrix-locinstall
 
 iemmatrix-clean:
-	rm -rf iemmatrix
 
 
 ########### miXed needed for the seq external in cyclone ##########################
 # maybe substituted by xeq in future
 
-miXed-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d miXed externals/miXed/
-
-miXed-build: miXed-src
+miXed-build:
 	make -C miXed PD_DIR=$(PDSOURCE)
 
 miXed_objects=seq midiflush midiformat midiparse tot
@@ -196,27 +157,9 @@ miXed-locinstall: miXed-build
 miXed: miXed-locinstall
 
 miXed-clean:
-	rm -rf miXed
-
-######## IEM GUI ##################
-# maybe substituted by iem-gui in future
-
-popup-src_: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d popup externals/bbogart/popup/
-
-popup-build_: popup-src
-	make -C popup pd_linux
-
-popup-locinstall_: popup-build_
-	cp popup/*.$(EXT) $(LOCINSTALL_DIR)
-
-popup-clean_:
-	rm -rf popup
 
 # ############  local popup ###############
-popup-src: 
-
-popup-build: popup-src
+popup-build:
 	make -C ../popup pd_linux
 
 popup-locinstall: popup-build
@@ -229,42 +172,31 @@ popup-clean:
 
 ######## OSC ##################
 
-osc-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d osc externals/mrpeach/osc
-
-osc-build: osc-src
+osc-build: 
 	make -C osc -f ../Makefile.subdir $(EXT)
 
 osc-locinstall: osc-build
 	cp osc/*.$(EXT) $(LOCINSTALL_DIR)
 
 osc-clean:
-	rm -rf osc
 
 osc: osc-locinstall
 
 ######## NET ##################
 
-net-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d net externals/mrpeach/net
-
-net-build: net-src
+net-build:
 	make -C net -f ../Makefile.subdir $(EXT)
 
 net-locinstall: net-build
 	cp net/*.$(EXT) $(LOCINSTALL_DIR)
 
 net-clean:
-	rm -rf net
 
 net: net-locinstall
 
 ######## ZEXY ##################
 
-zexy-src: sf-login
-	cvs $(CVSROOT) checkout -r $(REVISION) -d zexy externals/zexy 
-
-zexy-build: zexy-src
+zexy-build: 
 	make -C zexy/src
 
 zexy-locinstall: zexy-build
@@ -272,13 +204,12 @@ zexy-locinstall: zexy-build
 	cp zexy/abs/*.pd $(LOCINSTALL_DIR)
 
 zexy-clean:
-	rm -rf zexy
 
 zexy: zexy-locinstall
 
 ######## doit #################################
 
-sources: aconnect-src folder_list-build iem_ambi-src iem_bin_ambi-src iemgui-src iemlib-src iemmatrix-src iem_spec2-src miXed-src net-src osc-src popup-src zexy-src
+sources: folder_list-src
 
 build: aconnect-build folder_list-build iem_ambi-build iem_bin_ambi-build iemgui-build iemlib-build iemmatrix-build iem_spec2-build miXed-build net-build osc-build popup-build zexy-build
 
