--- a/src/libs/iem_ambi2/src/makefile_linux
+++ b/src/libs/iem_ambi2/src/makefile_linux
@@ -2,7 +2,10 @@ current: all
 
 .SUFFIXES: .pd_linux
 
-INCLUDE = -I. -I/usr/local/src/pd/src
+
+PDSOURCE?=/usr/local/src/pd/src
+
+INCLUDE = -I. -I$(PDSOURCE)
 
 LDFLAGS = -export-dynamic -shared
 LIB = -ldl -lm -lpthread
@@ -17,15 +20,8 @@ SYSTEM = $(shell uname -m)
 
 # the sources
 
-SRC = ambi_decode.c \
-	ambi_decode2.c \
-	ambi_decode3.c \
-	ambi_decode_cube.c \
-	ambi_encode.c \
-	ambi_rot.c \
-	iem_ambi.c
-
-TARGET = iem_ambi.pd_linux
+SRC =  $(wildcard *.c)
+TARGET = iem_ambi2.pd_linux
 
 
 OBJ = $(SRC:.c=.o) 
@@ -35,14 +31,12 @@ OBJ = $(SRC:.c=.o)
 #
 
 clean:
-	rm ..\$(TARGET)
 	rm *.o
 
 all: $(OBJ)
 	@echo :: $(OBJ)
 	$(LD) $(LDFLAGS) -o $(TARGET) *.o $(LIB)
 	strip --strip-unneeded $(TARGET)
-	mv $(TARGET) ..
 
 $(OBJ) : %.o : %.c
 	$(CC) $(CFLAGS) $(INCLUDE) -c -o $*.o $*.c
