--- a/src/libs/Makefile.subdir
+++ b/src/libs/Makefile.subdir
@@ -1,6 +1,6 @@
 current: pd_linux
 
-PDSOURCE = /usr/local/src/pd/src
+PDSOURCE ?= /usr/local/src/pd/src
 
 SOURCES=$(sort $(filter %.c, $(wildcard *.c)))
 
