--- a/src/libs/popup/makefile
+++ b/src/libs/popup/makefile
@@ -3,7 +3,7 @@ current:
 
 clean: ; rm -f popup.pd_{linux,nt,irix?,darwin} *.o
 
-PDSOURCE=/usr/local/src/pd/src
+PDSOURCE?=/usr/local/src/pd/src
 # ----------------------- NT -----------------------
 
 pd_nt: popup.dll
